[Windows Sandbox] Disable PreferSys32 mitigation for now.

Breaking debug component build, gpu process.  There is a component DLL called
display.dll that is clashing with the same name in system32.

Temporary disable for the moment.

(Note: also removing the other IMAGE_LOAD mitigations from the browser
process (post-startup) for now.  Only set in child processes.)

BUG=818388
TEST=sbox_integration_tests.exe, ProcessMitigationsTest.*

Change-Id: I1198e2222493a792df675d4b7675220d0da3459f
Reviewed-on: https://chromium-review.googlesource.com/950128
Reviewed-by: Will Harris <wfh@chromium.org>
Commit-Queue: Penny MacNeil <pennymac@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541021}
Former-commit-id: fc897c242fac290704e0f3e9297ce97012e849f0